fixed alignment
alignment of the button who is this page and nishchal's social media for

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,11 @@
   top: 0;
   position: absolute;
 }
-
+@media only screen and (device-width:360px;){
+  .content-impo h5{
+    width:80%;
+  }
+}
 #cover_quote {
   padding: 5px;
   padding-top: 10px;
